<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculo Combustible</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="hello_world">Hello world, SplashScreen!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_vehicle_registration">Enter Vehicle Registration</string>
    <string name="enter_vehicle_registration_hint">Enter Vehicle Registration</string>
    <string name="save_registration">Save Registration Number</string>
    <string name="main_menu">Main Menu</string>
    <string name="add_record">Add Record</string>
    <string name="edit_record">Edit Record</string>
    <string name="calculate_consumption">Calculate Consumption</string>
    <string name="delete_record">Delete Record</string>

</resources>
