<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_menu"
        android:id="@+id/textViewMenuHeading"
        android:gravity="center_horizontal"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayoutMainMenu">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_record"
            android:id="@+id/buttonAddRecord"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_record"
            android:id="@+id/buttonEditRecord"
            android:layout_alignEnd="@+id/buttonAddRecord"
            android:layout_alignParentRight="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_consumption"
            android:id="@+id/buttonCalculateConsumption"
            android:layout_below="@+id/buttonAddRecord"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_record"
            android:id="@+id/buttonDeleteRecord"
            android:layout_alignTop="@+id/buttonCalculateConsumption"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>